--- a/man/rmd/mlp_brulee_two_layer.Rmd
+++ b/man/rmd/mlp_brulee_two_layer.Rmd
@@ -37,11 +37,11 @@ Both `penalty` and `dropout` should be not be used in the same model.
 Other engine arguments of interest: 
 
  - `hidden_layer_2` and `activation_2` control the format of the second layer. 
- - `momentum()`: A number used to use historical gradient information during optimization.
- - `batch_size()`: An integer for the number of training set points in each batch.
- - `class_weights()`: Numeric class weights. See [brulee::brulee_mlp()].
- - `stop_iter()`: A non-negative integer for how many iterations with no improvement before stopping. (default: 5L).
- - `rate_schedule()`: A function to change the learning rate over epochs. See [brulee::schedule_decay_time()] for details. 
+ - `momentum`: A number used to use historical gradient information during optimization.
+ - `batch_size`: An integer for the number of training set points in each batch.
+ - `class_weights`: Numeric class weights. See [brulee::brulee_mlp()].
+ - `stop_iter`: A non-negative integer for how many iterations with no improvement before stopping. (default: 5L).
+ - `rate_schedule`: A function to change the learning rate over epochs. See [brulee::schedule_decay_time()] for details. 
 
 
 ## Translation from parsnip to the original package (regression)
