Brulee neural networks with two hidden layers (#1187)
* engine work for two-layer mlp models

* temp change for tunable

* enable parsnip to work with functions wit parameterized labels

* Revert "enable parsnip to work with functions wit parameterized labels"

This reverts commit bec04235504d99919a951e4e5e5cb0acafa3fdef.

* update tunable method for brulee mlps

* update for other brulee engines

* add rate_schedule to tunables

* doc updates

* typo fix

* update test

* fix two bugs in brulee tunable methods

* Update man/rmd/mlp_brulee_two_layer.Rmd

Co-authored-by: Hannah Frick <hfrick@users.noreply.github.com>

* remove () from argument names

* add mode to set_dependency()

* update tunables and tests

* redoc

---------

Co-authored-by: ‘topepo’ <‘mxkuhn@gmail.com’>
Co-authored-by: Hannah Frick <hfrick@users.noreply.github.com>

--- a/man/rmd/mlp_brulee_two_layer.Rmd
+++ b/man/rmd/mlp_brulee_two_layer.Rmd
@@ -1,7 +1,7 @@
 ```{r, child = "aaa.Rmd", include = FALSE}
 ```
 
-`r descr_models("mlp", "brulee")`
+`r descr_models("mlp", "brulee_two_layer")`
 
 ## Tuning Parameters
 
@@ -19,7 +19,7 @@ spec <-
     learn_rate = tune(),
     activation = tune()
   ) %>% 
-  set_engine("brulee")
+  set_engine("brulee_two_layer")
 
 param <- spec %>% make_parameter_list(defaults)
 ```
@@ -36,12 +36,14 @@ Both `penalty` and `dropout` should be not be used in the same model.
 
 Other engine arguments of interest: 
 
- - `momentum`: A number used to use historical gradient infomration during optimization.
+ - `hidden_layer_2` and `activation_2` control the format of the second layer. 
+ - `momentum`: A number used to use historical gradient information during optimization.
  - `batch_size`: An integer for the number of training set points in each batch.
  - `class_weights`: Numeric class weights. See [brulee::brulee_mlp()].
  - `stop_iter`: A non-negative integer for how many iterations with no improvement before stopping. (default: 5L).
  - `rate_schedule`: A function to change the learning rate over epochs. See [brulee::schedule_decay_time()] for details. 
- 
+
+
 ## Translation from parsnip to the original package (regression)
 
 ```{r brulee-reg}
@@ -52,13 +54,15 @@ mlp(
   epochs = integer(1),
   learn_rate = double(1),
   activation = character(1)
-) %>%  
-  set_engine("brulee") %>% 
+) %>%
+  set_engine("brulee_two_layer",
+             hidden_units_2 = integer(1),
+             activation_2 = character(1)) %>% 
   set_mode("regression") %>% 
   translate()
 ```
 
-Note that parsnip automatically sets linear activation in the last layer. 
+Note that parsnip automatically sets the linear activation in the last layer. 
 
 ## Translation from parsnip to the original package (classification)
 
@@ -71,7 +75,9 @@ mlp(
   learn_rate = double(1),
   activation = character(1)
 ) %>% 
-  set_engine("brulee") %>% 
+  set_engine("brulee_two_layer",
+             hidden_units_2 = integer(1),
+             activation_2 = character(1)) %>% 
   set_mode("classification") %>% 
   translate()
 ```
