--- a/README.Rmd
+++ b/README.Rmd
@@ -120,7 +120,7 @@ rand_forest(mtry = 10, trees = 2000) |>
   fit(mpg ~ ., data = mtcars)
 ```
 
-A list of all parsnip models across different CRAN packages can be found at https://www.tidymodels.org/find/parsnip.
+A list of all parsnip models across different CRAN packages can be found at https://www.tidymodels.org/find/parsnip/.
 
 ## Contributing
 
