--- a/man/rmd/aaa.Rmd
+++ b/man/rmd/aaa.Rmd
@@ -32,7 +32,7 @@ check_pkg_for_docs(parsnip:::extensions())
 make_mode_list <- function(mod, eng) {
   modes <- c("regression", "classification", "censored regression")
   exts <-
-    utils::read.delim(system.file("models.tsv", package = "parsnip")) |>
+    model_info_table |>
     dplyr::filter(model == mod & engine == eng) |> 
     dplyr::mutate(mode = factor(mode, levels = modes)) |> 
     dplyr::arrange(mode)
@@ -128,7 +128,7 @@ descr_models <- function(mod, eng) {
 
 uses_extension <- function(mod, eng, mod_mode) {
   exts <-
-    utils::read.delim(system.file("models.tsv", package = "parsnip")) |>
+    model_info_table |>
     dplyr::filter(
       model == mod & 
         engine == eng & 
