--- a/vignettes/articles/Examples.Rmd
+++ b/vignettes/articles/Examples.Rmd
@@ -1688,7 +1688,125 @@ The following examples use consistent data sets throughout. For regression, we u
     
   </details>
 
+  <details id="rand-forest-grf"> 
+  
+  <summary>With the `"grf"` engine</summary>
 
+  <h3>Regression Example (`grf`)</h3>
+
+  ```{r}
+  #| echo: false
+  knitr::spin_child("template-reg-chicago.R")
+  ```
+
+  We can define the model with specific parameters:
+
+  ```{r}
+  rf_reg_spec <- 
+    rand_forest(trees = 200, min_n = 5) |> 
+    # This model can be used for classification, regression, or quantile
+    # regression so set mode
+    set_mode("regression") |> 
+    set_engine("grf")
+  rf_reg_spec
+  ```
+
+  Now we create the model fit object:
+
+  ```{r}
+  set.seed(1)
+  rf_reg_fit <- rf_reg_spec |> fit(ridership ~ ., data = Chicago_train)
+  rf_reg_fit
+  ```
+
+  The holdout data can be predicted for their mean value as well as confidence intervals for the predictions:
+
+  ```{r}
+  predict(rf_reg_fit, Chicago_test)
+  predict(rf_reg_fit, Chicago_test, type = "conf_int")
+  ```
+
+
+  <h3>Classification Example (`grf`)</h3>
+
+  ```{r}
+  #| echo: false
+  knitr::spin_child("template-cls-two-class.R")
+  ```
+
+  We can define the model with specific parameters:
+
+  ```{r}
+  rf_cls_spec <- 
+    rand_forest(trees = 200, min_n = 5) |> 
+    # This model can be used for classification, regression, or quantile
+    # regression so set mode
+    set_mode("classification") |> 
+    set_engine("grf")
+  rf_cls_spec
+  ```
+
+  Now we create the model fit object:
+
+  ```{r}
+  set.seed(1)
+  rf_cls_fit <- rf_cls_spec |> fit(Class ~ ., data = data_train)
+  rf_cls_fit
+  ```
+
+  The holdout data can be predicted for both hard class predictions, probabilities, and confidence intervals. We'll bind these together into one tibble:
+
+  ```{r}
+  bind_cols(
+    predict(rf_cls_fit, data_test),
+    predict(rf_cls_fit, data_test, type = "prob")
+    predict(rf_cls_fit, data_test, type = "conf_int")
+  )
+  ```
+
+  <h3>Quantile regression Example (`grf`)</h3>
+
+  ```{r}
+  #| echo: false
+  knitr::spin_child("template-reg-sacramento.R")
+  ```
+
+  We can define the model but should set the model mode. Also, for these models the levels of the distirunbtion that we would like to predict need to specified with the mode using the `quantile_levels` argument. Let's predict the 0.25, 0.50, and 0.75 quantiles:
+
+  ```{r}
+  grf_quant_spec <- 
+    linear_reg() |> 
+    set_engine("grf") |> 
+    set_mode("quantile regression", quantile_levels = (1:3) / 4)
+  grf_quant_spec
+  ```
+
+  Now we create the model fit object:
+
+  ```{r}
+  set.seed(1)
+  grf_quant_fit <- grf_quant_spec |> fit(price ~ sqft, data = sac_train)
+  grf_quant_fit
+  ```
+
+  The holdout data can be predicted:
+
+  ```{r}
+  quant_pred <- predict(grf_quant_fit, sac_test)
+  quant_pred
+  ```
+  
+  `.pred_quantile` is a vector type that contains all of the quartile predictions for each row.  You can convert this to a rectangular data set using either of: 
+  
+  ```{r}
+  as.matrix(quant_pred$.pred_quantile)
+  
+  # or 
+  as_tibble(quant_pred$.pred_quantile)
+  ```
+  
+  </details>
+  
 ## `svm_linear()` models
 
   <details id="svm-linear-LiblineaR">
