--- a/man/rmd/rand_forest_grf.Rmd
+++ b/man/rmd/rand_forest_grf.Rmd
@@ -33,7 +33,7 @@ param$item
 
 ## Translation from parsnip to the original package (regression)
 
-See [`?regression_forest`]("https://grf-labs.github.io/grf/reference/regression_forest.html)
+See [`?regression_forest`](https://grf-labs.github.io/grf/reference/regression_forest.html)
 
 ```{r}
 #| label: grf-reg
@@ -49,7 +49,7 @@ rand_forest(
 
 ## Translation from parsnip to the original package (classification)
 
-See [`?probability_forest`]("https://grf-labs.github.io/grf/reference/probability_forest.html)
+See [`?probability_forest`](https://grf-labs.github.io/grf/reference/probability_forest.html)
 
 ```{r}
 #| label: grf-cls
@@ -65,7 +65,7 @@ rand_forest(
 
 ## Translation from parsnip to the original package (quantile regression)
 
-See [`?quantile_forest`]("https://grf-labs.github.io/grf/reference/quantile_forest.html)
+See [`?quantile_forest`](https://grf-labs.github.io/grf/reference/quantile_forest.html)
 
 When specifying _any_ quantile regression model, the user must specify the quantile levels _a priori_. 
 
