--- a/vignettes/articles/Examples.Rmd
+++ b/vignettes/articles/Examples.Rmd
@@ -1437,8 +1437,8 @@ The following examples use consistent data sets throughout. For regression, we u
 
   ```{r}
   mr_cls_spec <- 
-    multinom_reg(penalty = 0.1) |> 
-    set_engine("brulee")
+    multinom_reg() |> 
+    set_engine("brulee", learn_rate = 0.01, optimizer = "SGD")
   mr_cls_spec
   ```
 
@@ -1759,7 +1759,7 @@ The following examples use consistent data sets throughout. For regression, we u
   ```{r}
   bind_cols(
     predict(rf_cls_fit, data_test),
-    predict(rf_cls_fit, data_test, type = "prob")
+    predict(rf_cls_fit, data_test, type = "prob"),
     predict(rf_cls_fit, data_test, type = "conf_int")
   )
   ```
@@ -1775,7 +1775,7 @@ The following examples use consistent data sets throughout. For regression, we u
 
   ```{r}
   grf_quant_spec <- 
-    linear_reg() |> 
+    rand_forest() |> 
     set_engine("grf") |> 
     set_mode("quantile regression", quantile_levels = (1:3) / 4)
   grf_quant_spec
