--- a/man/rmd/boost_tree_xgboost.Rmd
+++ b/man/rmd/boost_tree_xgboost.Rmd
@@ -3,7 +3,7 @@
 #| include: false
 ```
 
-`r descr_models("boost_tree", "xgboost")`
+`r descr_models("boost_tree", "xgboost")`. Note that in late 2025, a new version of xgboost was released with differences in its interface and model objects. This version of parsnip should work with either version. 
 
 ## Tuning Parameters
 
