--- a/man/rmd/boost_tree_h2o.Rmd
+++ b/man/rmd/boost_tree_h2o.Rmd
@@ -76,6 +76,12 @@ boost_tree(
 
 Non-numeric predictors (i.e., factors) are internally converted to numeric. In the classification context, non-numeric outcomes (i.e., factors) are also internally converted to numeric. 
 
+## Case weights
+
+```{r}
+#| child: template-uses-case-weights.Rmd
+```
+
 ## Interpreting `mtry`
 
 ```{r}
