--- a/man/rmd/multinom_reg_h2o.Rmd
+++ b/man/rmd/multinom_reg_h2o.Rmd
@@ -57,6 +57,12 @@ multinom_reg(penalty = double(1), mixture = double(1)) |>
 
 By default, [h2o::h2o.glm()] uses the argument `standardize = TRUE` to center and scale the data. 
 
+## Case weights
+
+```{r}
+#| child: template-uses-case-weights.Rmd
+```
+
 ## Prediction types
 
 ```{r}
