--- a/man/rmd/naive_Bayes_h2o.Rmd
+++ b/man/rmd/naive_Bayes_h2o.Rmd
@@ -54,6 +54,12 @@ naive_Bayes(Laplace = numeric(0)) |>
   translate()
 ```
 
+## Case weights
+
+```{r}
+#| child: template-uses-case-weights.Rmd
+```
+
 ## Prediction types
 
 ```{r}
