--- a/man/rmd/poisson_reg_h2o.Rmd
+++ b/man/rmd/poisson_reg_h2o.Rmd
@@ -61,6 +61,12 @@ poisson_reg(penalty = double(1), mixture = double(1)) |>
 
 By default, `h2o::h2o.glm()` uses the argument `standardize = TRUE` to center and scale all numerical columns. 
 
+## Case weights
+
+```{r}
+#| child: template-uses-case-weights.Rmd
+```
+
 ## Prediction types
 
 ```{r}
