--- a/man/rmd/boost_tree_lightgbm.Rmd
+++ b/man/rmd/boost_tree_lightgbm.Rmd
@@ -79,6 +79,14 @@ boost_tree(
 
 Non-numeric predictors (i.e., factors) are internally converted to numeric. In the classification context, non-numeric outcomes (i.e., factors) are also internally converted to numeric. 
 
+## Case weights
+
+```{r}
+#| child: template-uses-case-weights.Rmd
+```
+
+Although the source documentation is unclear about how the weights are utilized, it appears that the weights are applied to the objective function, not just the sampling mechanism. A GitHub issue ([`https://github.com/microsoft/LightGBM/issues/1299`](https://github.com/microsoft/LightGBM/issues/1299)) has evidence that the weights are a "multiplication applied to every positive label weight" and shows some C++ code to that effect.
+
 ### Interpreting `mtry`
 
 ```{r}
