--- a/man/rmd/linear_reg_h2o.Rmd
+++ b/man/rmd/linear_reg_h2o.Rmd
@@ -58,6 +58,12 @@ linear_reg(penalty = 1, mixture = 0.5) |>
 
 By default, [h2o::h2o.glm()] uses the argument `standardize = TRUE` to center and scale the data. 
 
+## Case weights
+
+```{r}
+#| child: template-uses-case-weights.Rmd
+```
+
 ## Prediction types
 
 ```{r}
