update details files that should have case weight sections

--- a/man/rmd/cubist_rules_Cubist.Rmd
+++ b/man/rmd/cubist_rules_Cubist.Rmd
@@ -54,6 +54,14 @@ cubist_rules(
 #| child: template-tree-split-factors.Rmd
 ```
 
+
+## Case weights
+
+```{r}
+#| child: template-uses-case-weights.Rmd
+```
+
+
 ## Prediction types
 
 ```{r}
