--- a/man/rmd/decision_tree_partykit.Rmd
+++ b/man/rmd/decision_tree_partykit.Rmd
@@ -89,6 +89,12 @@ decision_tree(tree_depth = integer(1), min_n = integer(1)) |>
 #| child: template-tree-split-factors.Rmd
 ```
 
+## Case weights
+
+```{r}
+#| child: template-uses-case-weights.Rmd
+```
+
 ## Prediction types
 
 ```{r}
