--- a/man/rmd/rule_fit_h2o.Rmd
+++ b/man/rmd/rule_fit_h2o.Rmd
@@ -64,8 +64,6 @@ rule_fit(
 
 ## Translation from parsnip to the underlying model call  (classification)
 
-
-
 [agua::h2o_train_rule()] for `rule_fit()` is a wrapper around [h2o::h2o.rulefit()]. 
 
 `r uses_extension("rule_fit", "h2o", "classification")`
@@ -86,6 +84,12 @@ rule_fit(
 
 ```{r}
 #| child: template-makes-dummies.Rmd
+```
+
+## Case weights
+
+```{r}
+#| child: template-uses-case-weights.Rmd
 ```
 
 ## Prediction types
