--- a/man/rmd/linear_reg_quantreg.Rmd
+++ b/man/rmd/linear_reg_quantreg.Rmd
@@ -91,7 +91,7 @@ parsnip:::get_from_env("linear_reg_predict") |>
 
 ## Examples 
 
-The "Fitting and Predicting with parsnip" article contains [examples](https://parsnip.tidymodels.org/articles/articles/Examples.html#linear-reg-quantreg) for `linear_reg()` with the `"quantreg"` engine.
+The "Fitting and Predicting with parsnip" [article](https://www.tidymodels.org/learn/models/parsnip-predictions/) contains examples for `linear_reg()` with the `"quantreg"` engine.
 
 ## References
 
