--- a/man/rmd/poisson_reg_stan.Rmd
+++ b/man/rmd/poisson_reg_stan.Rmd
@@ -66,7 +66,7 @@ parsnip:::get_from_env("poisson_reg_predict") |>
 
 ## Examples 
 
-The "Fitting and Predicting with parsnip" article contains [examples](https://parsnip.tidymodels.org/articles/articles/Examples.html#linear-reg-stan) for `poisson_reg()` with the `"stan"` engine.
+The "Fitting and Predicting with parsnip" [article](https://www.tidymodels.org/learn/models/parsnip-predictions/) contains examples for `poisson_reg()` with the `"stan"` engine.
 
 ## References
 
