--- a/man/rmd/boost_tree_xgboost.Rmd
+++ b/man/rmd/boost_tree_xgboost.Rmd
@@ -33,6 +33,8 @@ param$item
 
 For `mtry`, the default value of `NULL` translates to using all available columns.
 
+XGBoost has a large number of engine parameters. The current list is found at [`https://xgboost.readthedocs.io/en/stable/parameter.html`](https://xgboost.readthedocs.io/en/stable/parameter.html).
+
 ## Translation from parsnip to the original package (regression)
 
 ```{r}
